--- a/src/assets/scss/components/ui/BasicButton.scss
+++ b/src/assets/scss/components/ui/BasicButton.scss
@@ -1,75 +1,187 @@
+@mixin button-pressed-selector {
+  &:hover,
+  &:active,
+  &:focus-visible {
+    @content;
+  }
+}
+
+@mixin button-disabled-selector {
+  &[disabled],
+  &.button--disabled,
+  &[disabled]:hover,
+  &.button--disabled:hover,
+  &[disabled]:active,
+  &.button--disabled:active,
+  &[disabled]:focus-visible,
+  &.button--disabled:focus-visible {
+    @content;
+  }
+}
+
 .button {
   @include reset-button;
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   box-sizing: border-box;
   width: 100%;
-  min-height: 60px;
-  border-radius: 4px;
-  padding: 2px 19px;
-  @include font-size-set(18);
+  min-height: 52px;
+  border-radius: 8px;
+  padding: 15px;
+  @include font-size-button(16);
   font-weight: 500;
   text-align: center;
   text-decoration: none;
   color: $color-white;
-  border: 1px solid $color-green;
-  background: $color-green;
+  border: 1px solid $color-green-50;
+  background: $color-green-50;
 
   &__text {
     display: block;
   }
-  &:hover {
-    border-color: $color-green-2;
-    background-color: $color-green-2;
+
+  &__icon {
+    display: block;
+    width: 20px;
+    height: 20px;
+
+    svg {
+      width: 100%;
+      height: 100%;
+
+      * {
+        fill: $color-white;
+      }
+    }
   }
+
+  &__icon + &__text,
+  &__text + &__icon {
+    margin-left: 2px;
+  }
+
+  &--icon-only {
+    width: 52px;
+  }
+
+  &--small {
+    min-height: 42px;
+    padding: 11px;
+    @include font-size-button(13);
+
+    .button__icon {
+      width: 18px;
+      height: 18px;
+    }
+
+    &.button--icon-only {
+      width: 42px;
+    }
+  }
+
+  &--mini {
+    min-height: 30px;
+    border-radius: 6px;
+    padding: 7px;
+    @include font-size-button(12);
+
+    .button__icon {
+      width: 14px;
+      height: 14px;
+    }
+
+    .button__icon + .button__text,
+    .button__text + .button__icon {
+      margin-left: 0;
+    }
+
+    &.button--icon-only {
+      width: 30px;
+    }
+  }
+
+  @include button-pressed-selector {
+    border-color: $color-green-60;
+    background-color: $color-green-60;
+  }
+
   &[disabled],
   &--disabled,
   &[disabled]:hover,
-  &--disabled:hover {
-    color: $color-white;
-    border-color: $color-green-3;
-    background-color: $color-green-3;
+  &--disabled:hover,
+  &[disabled]:active,
+  &--disabled:active,
+  &[disabled]:focus-visible,
+  &--disabled:focus-visible {
+    color: $color-gray-40;
+    border-color: $color-gray-20;
+    background-color: $color-gray-20;
+
+    .button__icon {
+      svg {
+        * {
+          fill: $color-gray-40;
+        }
+      }
+    }
   }
 
   &--secondary {
-    border-color: $color-blue;
-    background-color: $color-blue;
+    border-color: $color-blue-50;
+    background-color: $color-blue-50;
 
-    &:hover {
-      border-color: $color-blue-2;
-      background-color: $color-blue-2;
+    @include button-pressed-selector {
+      border-color: $color-blue-60;
+      background-color: $color-blue-60;
     }
-    &[disabled],
-    &.button--disabled,
-    &[disabled]:hover,
-    &.button--disabled:hover {
-      border-color: $color-blue-3;
-      background-color: $color-blue-3;
+
+    @include button-disabled-selector {
+      color: $color-gray-40;
+      border-color: $color-gray-20;
+      background-color: $color-gray-20;
     }
   }
 
   &--tertiary {
-    border-color: $color-pink;
-    background-color: $color-pink;
+    border-color: $color-navy-50;
+    background-color: $color-navy-50;
 
-    &:hover {
-      border-color: $color-pink-2;
-      background-color: $color-pink-2;
+    @include button-pressed-selector {
+      border-color: $color-navy-60;
+      background-color: $color-navy-60;
     }
-    &[disabled],
-    &.button--disabled,
-    &[disabled]:hover,
-    &.button--disabled:hover {
-      border-color: $color-pink-3;
-      background-color: $color-pink-3;
+
+    @include button-disabled-selector {
+      color: $color-gray-40;
+      border-color: $color-gray-20;
+      background-color: $color-gray-20;
+    }
+  }
+
+  &--quaternary {
+    color: $color-black;
+    border-color: $color-gray-30;
+    background-color: $color-gray-30;
+
+    .button__icon {
+      svg {
+        * {
+          fill: $color-black;
+        }
+      }
+    }
+
+    @include button-pressed-selector {
+      border-color: $color-gray-40;
+      background-color: $color-gray-40;
+    }
+
+    @include button-disabled-selector {
+      color: $color-gray-40;
+      border-color: $color-gray-20;
+      background-color: $color-gray-20;
     }
   }
 }
