--- a/src/assets/scss/components/ui/common/PageContents.scss
+++ b/src/assets/scss/components/ui/common/PageContents.scss
@@ -1,10 +1,8 @@
-.layout {
+.page-contents {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  height: 100%;
-  min-width: $page-min-width;
-  box-sizing: border-box;
 
   &__head {
     flex: none;
@@ -12,9 +10,6 @@
 
   &__body {
     flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
   }
 
   &__foot {
