--- a/src/assets/scss/layouts/DefaultHeader.scss
+++ b/src/assets/scss/layouts/DefaultHeader.scss
@@ -12,42 +12,114 @@
   right: 0;
 }
 .header {
+  display: flex;
+  align-items: center;
   width: 100%;
   min-width: $page-min-width;
+  min-height: 48px;
   box-sizing: border-box;
-  padding: 20px;
-  background-color: #00a69e;
+  padding: 12px 16px;
+  background-color: $color-white;
 
-  &__logo {
-    margin: 0;
-    text-align: center;
-    color: #fff;
-    @include font-size-default(30);
-  }
-
-  &__logo-link {
-    display: block;
-    color: inherit;
-    text-decoration: none;
-  }
-}
-.gnb {
-  margin-top: 15px;
-
-  &__list {
-    @include reset-list;
+  &__left,
+  &__right {
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex: 1;
+    min-width: 0;
   }
 
-  &__item {
+  &__right {
+    justify-content: flex-end;
+  }
+
+  &__center {
+    display: flex;
+    align-items: center;
+    flex: none;
+    max-width: 40%;
+
+    @include media-mobile-small {
+      max-width: 30%;
+    }
+
+    @include media-mobile-mini {
+      max-width: 24%;
+    }
+
+    &--full {
+      max-width: none;
+      flex: 1;
+      min-width: 0;
+
+      .header__title {
+        flex: 0 1 auto;
+      }
+    }
+  }
+
+  &__title {
+    flex: 1;
+    min-width: 0;
+    margin: 0;
+    @include font-size-default(16);
+    font-weight: 500;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  &__button {
+    @include reset-button;
+    position: relative;
+    display: block;
+    width: 24px;
+    height: 24px;
+    flex: none;
+
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -6px;
+      left: -6px;
+      box-sizing: content-box;
+      padding: 6px;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0);
+    }
+
     & + & {
       margin-left: 12px;
     }
+
+    &-icon {
+      display: block;
+      width: 100%;
+      height: 100%;
+
+      * {
+        fill: $color-black;
+      }
+    }
+
+    &-text {
+      @include for-a11y;
+    }
+
+    &--notice {
+      &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 1px;
+        width: 4px;
+        height: 4px;
+        border-radius: 50%;
+        background-color: $color-semantic-essential;
+      }
+    }
   }
-}
-:global(.page-b) .header,
-:global(.page-c) .header {
-  background-color: #075f5b;
 }
