--- a/src/assets/scss/components/ui/layer/UiLayer.scss
+++ b/src/assets/scss/components/ui/layer/UiLayer.scss
@@ -12,6 +12,7 @@
   text-align: center;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
+  transition: opacity 350ms linear;
 
   &::before {
     content: '';
@@ -36,5 +37,10 @@
     display: block;
     width: 100%;
     height: 100%;
+  }
+
+  &--opened {
+    display: block;
+    opacity: 1;
   }
 }
