--- a/src/assets/scss/components/ui/layer/UiLayer.scss
+++ b/src/assets/scss/components/ui/layer/UiLayer.scss
@@ -12,6 +12,7 @@
   text-align: center;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
+  background-color: rgba(0, 0, 0, 0.5);
   transition: opacity 350ms linear;
 
   &::before {
@@ -24,19 +25,14 @@
   &__container {
     display: inline-block;
     vertical-align: middle;
-    font-size: 16px;
-    line-height: 24px;
+    @include font-size-default(16);
     white-space: normal;
     text-align: left;
   }
 
-  &--full::before {
-    display: none;
-  }
-  &--full &__container {
-    display: block;
-    width: 100%;
-    height: 100%;
+  &__loop {
+    position: absolute;
+    z-index: -1;
   }
 
   &--opened {
@@ -44,8 +40,54 @@
     opacity: 1;
   }
 
-  &__loop {
-    position: absolute;
-    z-index: -1;
+  &--full {
+    overflow: hidden;
+    -webkit-overflow-scrolling: auto;
+    background-color: transparent;
+
+    &::before {
+      display: none;
+    }
+
+    .layer__container {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &--toast,
+  &--toast-fix {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: flex-end;
+    overflow: hidden;
+    -webkit-overflow-scrolling: auto;
+
+    &::before {
+      display: block;
+      height: 80px;
+      flex: none;
+    }
+
+    .layer__container {
+      flex: 0 1 auto;
+      min-height: 0;
+      display: block;
+      width: 100%;
+      transform: translateY(100%);
+      transition: transform 350ms;
+    }
+
+    &.layer--opened .layer__container {
+      transform: translateY(0);
+    }
+  }
+
+  &--toast-fix {
+    .layer__container {
+      flex: 1;
+    }
   }
 }
