셀렉트 컴포넌트 작업

--- a/src/assets/scss/components/ui/form/BasicInput.scss
+++ b/src/assets/scss/components/ui/form/BasicInput.scss
@@ -23,6 +23,11 @@
     &--right {
       text-align: right;
     }
+
+    &[readonly],
+    &[disabled] {
+      color: $color-gray-40;
+    }
   }
 
   &__delete {
