--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -133,3 +133,99 @@ body,
     margin-bottom: 0;
   }
 }
+
+/* display-block */
+.display-block.display-block {
+  display: block;
+}
+
+/* inline-block */
+.inline-block.inline-block {
+  display: inline-block;
+  vertical-align: top;
+}
+
+/* font-weight */
+.font-weight-thin.font-weight-thin {
+  font-weight: 100;
+}
+.font-weight-light.font-weight-light {
+  font-weight: 300;
+}
+.font-weight-regular.font-weight-regular {
+  font-weight: 400;
+}
+.font-weight-medium.font-weight-medium {
+  font-weight: 500;
+}
+.font-weight-bold.font-weight-bold {
+  font-weight: 700;
+}
+
+/* underline */
+.underline {
+  text-decoration: underline;
+}
+
+/* basic-link */
+.basic-link {
+  color: inherit;
+  text-decoration: underline;
+}
+
+/* none-deco-link */
+.none-deco-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+/* link-block */
+.link-block {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+}
+
+/* align */
+.align-left.align-left {
+  text-align: left;
+}
+.align-right.align-right {
+  text-align: right;
+}
+.align-center.align-center {
+  text-align: center;
+}
+
+/* ellipsis */
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* align-self */
+.align-self {
+  &-start {
+    align-self: flex-start;
+  }
+  &-center {
+    align-self: center;
+  }
+  &-end {
+    align-self: flex-end;
+  }
+}
+
+/* justify-self */
+.justify-self {
+  &-start {
+    justify-self: start;
+  }
+  &-center {
+    justify-self: center;
+  }
+  &-end {
+    justify-self: end;
+  }
+}
