--- a/src/assets/scss/components/ui/layout/PageContents.scss
+++ b/src/assets/scss/components/ui/layout/PageContents.scss
@@ -11,6 +11,9 @@
   &__body {
     flex: 1;
     padding: 20px 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
   }
 
   &__foot {
