본인인증 진행중

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -134,18 +134,18 @@ body,
   }
 }
 
-/* display-block */
+// display-block
 .display-block.display-block {
   display: block;
 }
 
-/* inline-block */
+// inline-block
 .inline-block.inline-block {
   display: inline-block;
   vertical-align: top;
 }
 
-/* font-weight */
+// font-weight
 .font-weight-thin.font-weight-thin {
   font-weight: 100;
 }
@@ -162,31 +162,31 @@ body,
   font-weight: 700;
 }
 
-/* underline */
+// underline
 .underline {
   text-decoration: underline;
 }
 
-/* basic-link */
+// basic-link
 .basic-link {
   color: inherit;
   text-decoration: underline;
 }
 
-/* none-deco-link */
+// none-deco-link
 .none-deco-link {
   color: inherit;
   text-decoration: none;
 }
 
-/* link-block */
+// link-block
 .link-block {
   display: block;
   color: inherit;
   text-decoration: none;
 }
 
-/* align */
+// align
 .align-left.align-left {
   text-align: left;
 }
@@ -197,14 +197,14 @@ body,
   text-align: center;
 }
 
-/* ellipsis */
+// ellipsis
 .ellipsis {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-/* align-self */
+// align-self
 .align-self {
   &-start {
     align-self: flex-start;
@@ -217,15 +217,9 @@ body,
   }
 }
 
-/* justify-self */
-.justify-self {
-  &-start {
-    justify-self: start;
-  }
-  &-center {
-    justify-self: center;
-  }
-  &-end {
-    justify-self: end;
+// input-width
+.input-width {
+  &-telecom {
+    width: 128px;
   }
 }
