--- a/src/assets/scss/components/ui/form/InputBlock.scss
+++ b/src/assets/scss/components/ui/form/InputBlock.scss
@@ -85,6 +85,10 @@
     &--sub + & {
       margin-left: 12px;
     }
+
+    & + &--margin-regular {
+      margin-left: 12px;
+    }
   }
 
   &--disabled {
