--- a/src/assets/scss/components/ui/layer/FullPopup.scss
+++ b/src/assets/scss/components/ui/layer/FullPopup.scss
@@ -17,15 +17,28 @@
     min-height: 0;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 
     &-inner {
-      padding: 20px;
+      flex: 1;
+      padding: 20px 20px 24px;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
 
       &::before,
       &::after {
         content: '';
         display: table;
         clear: both;
+      }
+    }
+
+    &:last-child {
+      .popup__body-inner {
+        padding-bottom: 40px;
       }
     }
   }
