--- a/src/assets/scss/components/ui/layout/PageContents.scss
+++ b/src/assets/scss/components/ui/layout/PageContents.scss
@@ -10,10 +10,14 @@
 
   &__body {
     flex: 1;
-    padding: 20px 25px;
+    padding: 30px 25px 24px;
     display: flex;
     flex-direction: column;
     align-items: stretch;
+
+    &:last-child {
+      padding-bottom: 40px;
+    }
   }
 
   &__foot {
