체크박스, 아코디언 컴포넌트 작업

--- a/src/assets/scss/views/uiGuide/GuideComponent.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponent.scss
@@ -5,7 +5,10 @@
 
 .test-section {
   padding-top: 50px;
-  @include font-size-default(30);
+
+  & + & {
+    margin-top: 30px;
+  }
 
   &-title {
     margin: 0 0 20px;
@@ -31,8 +34,4 @@
     padding-top: 20px;
     border-top: 2px dashed #ccc;
   }
-}
-
-.test-section + .test-section {
-  margin-top: 30px;
 }
