본인인증 약관동의, 카드사 셀렉트 작업

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -63,6 +63,14 @@ body,
 }
 
 // row-margin
+@mixin row-margin-first-last {
+  &:first-child {
+    margin-top: 0;
+  }
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
 .row-margin-none.row-margin-none {
   margin-top: 0;
   margin-bottom: 0;
@@ -70,68 +78,37 @@ body,
 .row-margin-item.row-margin-item {
   margin-top: 8px;
   margin-bottom: 8px;
-
-  &:first-child {
-    margin-top: 0;
-  }
-  &:last-child {
-    margin-bottom: 0;
-  }
+  @include row-margin-first-last;
 }
 .row-margin-item-group.row-margin-item-group {
   margin-top: 16px;
   margin-bottom: 16px;
-
-  &:first-child {
-    margin-top: 0;
-  }
-  &:last-child {
-    margin-bottom: 0;
-  }
+  @include row-margin-first-last;
 }
 .row-margin-contents.row-margin-contents {
+  margin-top: 24px;
+  margin-bottom: 24px;
+  @include row-margin-first-last;
+}
+.row-margin-container.row-margin-container {
   margin-top: 32px;
   margin-bottom: 32px;
-
-  &:first-child {
-    margin-top: 0;
-  }
-  &:last-child {
-    margin-bottom: 0;
-  }
+  @include row-margin-first-last;
 }
-.row-margin-contents-group.row-margin-contents-group {
+.row-margin-container-group.row-margin-container-group {
   margin-top: 48px;
   margin-bottom: 48px;
-
-  &:first-child {
-    margin-top: 0;
-  }
-  &:last-child {
-    margin-bottom: 0;
-  }
+  @include row-margin-first-last;
 }
 .row-margin-block.row-margin-block {
   margin-top: 80px;
   margin-bottom: 80px;
-
-  &:first-child {
-    margin-top: 0;
-  }
-  &:last-child {
-    margin-bottom: 0;
-  }
+  @include row-margin-first-last;
 }
 .row-margin-block-group.row-margin-block-group {
   margin-top: 120px;
   margin-bottom: 120px;
-
-  &:first-child {
-    margin-top: 0;
-  }
-  &:last-child {
-    margin-bottom: 0;
-  }
+  @include row-margin-first-last;
 }
 
 // display-block
@@ -221,5 +198,12 @@ body,
 .input-width {
   &-telecom {
     width: 128px;
+  }
+}
+
+// colors
+.color {
+  &-green {
+    color: $color-green-50;
   }
 }
