--- a/src/assets/scss/components/ui/accordion/UiAccordion.scss
+++ b/src/assets/scss/components/ui/accordion/UiAccordion.scss
@@ -15,5 +15,66 @@
       height: auto;
       overflow: visible;
     }
+
+    &::before,
+    &::after {
+      content: '';
+      display: table;
+    }
+  }
+
+  &__opener {
+    @include reset-button;
+    display: block;
+    width: 18px;
+    height: 18px;
+    position: relative;
+    transition: transform 0.2s;
+
+    &::before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: -8px;
+      left: -8px;
+      width: 100%;
+      height: 100%;
+      padding: 8px;
+      box-sizing: content-box;
+      background-color: rgba(0, 0, 0, 0);
+    }
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+
+      * {
+        fill: $color-gray-60;
+        transition: fill 0.2s;
+      }
+    }
+
+    &-text {
+      @include for-a11y;
+    }
+
+    &[disabled] {
+      svg {
+        * {
+          fill: $color-gray-40;
+        }
+      }
+    }
+
+    &:global(.is-accordion-opened) {
+      transform: rotate(180deg);
+
+      svg {
+        * {
+          fill: $color-black;
+        }
+      }
+    }
   }
 }
