--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -207,3 +207,39 @@ body,
     color: $color-green-50;
   }
 }
+
+// text
+.text {
+  &-body {
+    &-1 {
+      margin: 0;
+      @include font-size-default(16);
+    }
+    &-2 {
+      margin: 0;
+      @include font-size-default(15);
+    }
+    &-3 {
+      margin: 0;
+      @include font-size-default(14);
+    }
+    &-4 {
+      margin: 0;
+      @include font-size-default(13);
+    }
+    &-5 {
+      margin: 0;
+      @include font-size-default(12);
+    }
+  }
+  &-title {
+    &-1 {
+      margin: 0;
+      @include font-size-head(20);
+    }
+    &-2 {
+      margin: 0;
+      @include font-size-head(18);
+    }
+  }
+}
