--- a/src/assets/scss/components/ui/common/IllustObject.scss
+++ b/src/assets/scss/components/ui/common/IllustObject.scss
@@ -3,11 +3,30 @@
   width: 200px;
   height: 160px;
   margin: auto;
+  box-sizing: content-box;
   padding-bottom: 16px;
+  background: url('@/assets/images/illustration/img-1qcapital.png') no-repeat
+    50% 0 / 200px auto;
 
-  svg {
-    display: block;
-    width: 100%;
-    height: 100%;
+  &--complete {
+    background-image: url('@/assets/images/illustration/img-complete.png');
+  }
+  &--error {
+    background-image: url('@/assets/images/illustration/img-error.png');
+  }
+  &--fail {
+    background-image: url('@/assets/images/illustration/img-fail.png');
+  }
+  &--license {
+    background-image: url('@/assets/images/illustration/img-license.png');
+  }
+  &--certification {
+    background-image: url('@/assets/images/illustration/img-certification.png');
+  }
+  &--star {
+    background-image: url('@/assets/images/illustration/img-star.png');
+  }
+  &--appfree {
+    background-image: url('@/assets/images/illustration/img-appfree.png');
   }
 }
