--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -219,6 +219,9 @@ body,
 .color-gray.color-gray {
   color: $color-gray-70;
 }
+.color-navy.color-navy {
+  color: $color-navy-50;
+}
 
 // text
 .text {
