--- a/src/assets/scss/components/ui/text/keyValue.scss
+++ b/src/assets/scss/components/ui/text/keyValue.scss
@@ -1,38 +1,36 @@
 .key-value {
-  &__list {
-    @include reset-list;
-  }
+  @include reset-list;
 
   &__item {
     display: flex;
     align-items: flex-start;
     @include font-size-default(15);
-    min-height: #{$line-height-default}em;
-  }
 
-  &__item + &__item {
-    margin-top: 10px;
+    & + & {
+      margin-top: 10px;
+    }
   }
 
   &__key {
+    flex: none;
+    margin-right: 16px;
     color: $color-gray-60;
   }
 
   &__value {
     flex: 1;
-    margin-left: 16px;
+    min-width: 0;
     text-align: right;
-    color: $color-black;
+    margin: 0;
   }
 
   &--left {
-    .key-value {
-      &__key {
-        max-width: 80px;
-      }
-      &__value {
-        text-align: left;
-      }
+    .key-value__key {
+      width: 80px;
+    }
+
+    .key-value__value {
+      text-align: left;
     }
   }
 }
