--- a/src/assets/scss/components/ui/tab/FilterTab.scss
+++ b/src/assets/scss/components/ui/tab/FilterTab.scss
@@ -1,20 +1,65 @@
 .filter-tab {
-  display: block;
-  margin-bottom: 16px;
+  margin: 0 -20px 30px;
+
+  &::before,
+  &::after {
+    content: '';
+    display: table;
+  }
+
+  &__inner {
+    position: relative;
+
+    &::before,
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      width: 20px;
+      height: 100%;
+    }
+
+    &::before {
+      left: 0;
+      background: linear-gradient(
+        to right,
+        rgba($color-white, 1) 0%,
+        rgba($color-white, 1) 49.48%,
+        rgba($color-white, 0) 100%
+      );
+    }
+
+    &::after {
+      right: 0;
+      background: linear-gradient(
+        to right,
+        rgba($color-white, 0) 0%,
+        rgba($color-white, 1) 50.52%,
+        rgba($color-white, 1) 100%
+      );
+    }
+  }
 
   &__list {
     @include reset-list;
     display: flex;
     align-items: stretch;
     box-sizing: border-box;
-    padding: 5px;
-    border: 1px solid $color-gray-20;
-    border-radius: 100px;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+
+    &::before,
+    &::after {
+      content: '';
+      flex: none;
+      display: block;
+      width: 20px;
+    }
   }
 
   &__item {
-    flex: 1;
-    min-width: 0;
+    flex: none;
     display: flex;
     align-items: stretch;
 
@@ -35,21 +80,23 @@
     align-items: center;
     justify-content: center;
     border-radius: 100px;
-    padding: 10px 0 9px;
+    padding: 5px 11px;
+    border: 1px solid $color-gray-30;
   }
 
   &__text {
     display: block;
-    @include font-size-default(15);
+    @include font-size-default(13);
     color: $color-gray-60;
   }
 
   &__item--active,
   &__item:global(.is-tab-opened) {
-    .round-tab__button {
+    .filter-tab__button {
+      border-color: $color-navy-50;
       background-color: $color-navy-50;
     }
-    .round-tab__text {
+    .filter-tab__text {
       color: $color-white;
       font-weight: 500;
     }
