--- a/src/assets/scss/components/ui/layer/ToastPopup.scss
+++ b/src/assets/scss/components/ui/layer/ToastPopup.scss
@@ -17,7 +17,7 @@
     -webkit-overflow-scrolling: touch;
 
     &-inner {
-      padding: 16px 20px;
+      padding: 8px 20px 16px;
 
       &::before,
       &::after {
