--- a/src/assets/scss/components/ui/tab/FilterTab.scss
+++ b/src/assets/scss/components/ui/tab/FilterTab.scss
@@ -41,13 +41,16 @@
     }
   }
 
+  &__scroller {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+
   &__list {
     @include reset-list;
     display: flex;
     align-items: stretch;
     box-sizing: border-box;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
 
     &::before,
     &::after {
