--- a/src/assets/scss/components/ui/tab/NavTab.scss
+++ b/src/assets/scss/components/ui/tab/NavTab.scss
@@ -77,7 +77,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 9px 2px 10px;
+    padding: 6px 2px 10px;
   }
 
   &__text {
@@ -105,7 +105,7 @@
         opacity: 1;
       }
     }
-    .nav-tab__list {
+    .nav-tab__scroller {
       overflow: auto;
       -webkit-overflow-scrolling: touch;
     }
