color-gray-secondary 클래스 추가

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -219,6 +219,9 @@ body,
 .color-gray.color-gray {
   color: $color-gray-70;
 }
+.color-gray-secondary.color-gray-secondary {
+  color: $color-gray-60;
+}
 .color-navy.color-navy {
   color: $color-navy-50;
 }
