--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -224,6 +224,9 @@ body,
 .color-gray.color-gray {
   color: $color-gray-70;
 }
+.color-tertiary.color-tertiary {
+  color: $color-gray-80;
+}
 .color-navy.color-navy {
   color: $color-navy-50;
 }
