컬러변수 추가

--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -11,6 +11,7 @@ $color-black: #15181f;
 $color-white: #fff;
 
 $color-semantic-essential: #f64a4a;
+$color-semantic-caution: #ec700f;
 $color-semantic-warning: #ffa514;
 $color-semantic-positive: #42a946;
 $color-semantic-accent: #0091ea;
