--- a/src/assets/scss/views/uiGuide/GuideComponentModule.scss
+++ b/src/assets/scss/views/uiGuide/GuideComponentModule.scss
@@ -3,3 +3,4 @@
 @import '@/assets/scss/components/import/bank-brand.scss';
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/inline-logo.scss';
+@import '@/assets/scss/components/import/RankingBadge.scss';
