--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -62,6 +62,170 @@ body,
   margin: 0;
 }
 
+// display-block
+.display-block.display-block {
+  display: block;
+}
+
+// inline-block
+.inline-block.inline-block {
+  display: inline-block;
+  vertical-align: top;
+}
+
+// font-weight
+.font-weight-thin.font-weight-thin {
+  font-weight: 100;
+}
+.font-weight-light.font-weight-light {
+  font-weight: 300;
+}
+.font-weight-regular.font-weight-regular {
+  font-weight: 400;
+}
+.font-weight-medium.font-weight-medium {
+  font-weight: 500;
+}
+.font-weight-bold.font-weight-bold {
+  font-weight: 700;
+}
+
+// underline
+.underline.underline {
+  text-decoration: underline;
+}
+
+// basic-link
+.basic-link.basic-link {
+  color: inherit;
+  text-decoration: underline;
+}
+
+// none-deco-link
+.none-deco-link.none-deco-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+// link-block
+.link-block.link-block {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+}
+
+// align
+.align-left.align-left {
+  text-align: left;
+}
+.align-right.align-right {
+  text-align: right;
+}
+.align-center.align-center {
+  text-align: center;
+}
+
+// ellipsis
+.ellipsis.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+// align-items
+.align-items-start.align-items-start {
+  align-items: flex-start;
+}
+.align-items-center.align-items-center {
+  align-items: center;
+}
+.align-items-end.align-items-end {
+  align-items: flex-end;
+}
+
+// align-self
+.align-self-start.align-self-start {
+  align-self: flex-start;
+}
+.align-self-center.align-self-center {
+  align-self: center;
+}
+.align-self-end.align-self-end {
+  align-self: flex-end;
+}
+
+// justify-conten
+.justify-conten-start.justify-conten-start {
+  justify-content: flex-start;
+}
+.justify-conten-center.justify-conten-center {
+  justify-content: center;
+}
+.justify-conten-end.justify-conten-end {
+  justify-content: flex-end;
+}
+
+// input-width
+.input-width {
+  &-telecom {
+    width: 128px;
+  }
+}
+
+// colors
+.color-black.color-black {
+  color: $color-black;
+}
+.color-green.color-green {
+  color: $color-green-50;
+}
+.color-red.color-red {
+  color: $color-semantic-essential;
+}
+.color-gray.color-gray {
+  color: $color-gray-70;
+}
+.color-gray-secondary.color-gray-secondary {
+  color: $color-gray-60;
+}
+.color-tertiary.color-tertiary {
+  color: $color-gray-80;
+}
+.color-navy.color-navy {
+  color: $color-navy-50;
+}
+
+// text
+.text-body-1.text-body-1 {
+  margin: 0;
+  @include font-size-default(16);
+}
+.text-body-2.text-body-2 {
+  margin: 0;
+  @include font-size-default(15);
+}
+.text-body-3.text-body-3 {
+  margin: 0;
+  @include font-size-default(14);
+}
+.text-body-4.text-body-4 {
+  margin: 0;
+  @include font-size-default(13);
+}
+.text-body-5.text-body-5 {
+  margin: 0;
+  @include font-size-default(12);
+}
+
+.text-title-1.text-title-1 {
+  margin: 0;
+  @include font-size-head(20);
+}
+.text-title-2.text-title-2 {
+  margin: 0;
+  @include font-size-head(18);
+}
+
 // row-margin
 @mixin row-margin-first-last {
   &:first-child {
@@ -134,148 +298,4 @@ body,
   margin-top: 120px;
   margin-bottom: 120px;
   @include row-margin-first-last;
-}
-
-// display-block
-.display-block.display-block {
-  display: block;
-}
-
-// inline-block
-.inline-block.inline-block {
-  display: inline-block;
-  vertical-align: top;
-}
-
-// font-weight
-.font-weight-thin.font-weight-thin {
-  font-weight: 100;
-}
-.font-weight-light.font-weight-light {
-  font-weight: 300;
-}
-.font-weight-regular.font-weight-regular {
-  font-weight: 400;
-}
-.font-weight-medium.font-weight-medium {
-  font-weight: 500;
-}
-.font-weight-bold.font-weight-bold {
-  font-weight: 700;
-}
-
-// underline
-.underline {
-  text-decoration: underline;
-}
-
-// basic-link
-.basic-link {
-  color: inherit;
-  text-decoration: underline;
-}
-
-// none-deco-link
-.none-deco-link {
-  color: inherit;
-  text-decoration: none;
-}
-
-// link-block
-.link-block {
-  display: block;
-  color: inherit;
-  text-decoration: none;
-}
-
-// align
-.align-left.align-left {
-  text-align: left;
-}
-.align-right.align-right {
-  text-align: right;
-}
-.align-center.align-center {
-  text-align: center;
-}
-
-// ellipsis
-.ellipsis {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-// align-self
-.align-self {
-  &-start {
-    align-self: flex-start;
-  }
-  &-center {
-    align-self: center;
-  }
-  &-end {
-    align-self: flex-end;
-  }
-}
-
-// input-width
-.input-width {
-  &-telecom {
-    width: 128px;
-  }
-}
-
-// colors
-.color-black.color-black {
-  color: $color-black;
-}
-.color-green.color-green {
-  color: $color-green-50;
-}
-.color-red.color-red {
-  color: $color-semantic-essential;
-}
-.color-gray.color-gray {
-  color: $color-gray-70;
-}
-.color-gray-secondary.color-gray-secondary {
-  color: $color-gray-60;
-}
-.color-tertiary.color-tertiary {
-  color: $color-gray-80;
-}
-.color-navy.color-navy {
-  color: $color-navy-50;
-}
-
-// text
-.text-body-1.text-body-1 {
-  margin: 0;
-  @include font-size-default(16);
-}
-.text-body-2.text-body-2 {
-  margin: 0;
-  @include font-size-default(15);
-}
-.text-body-3.text-body-3 {
-  margin: 0;
-  @include font-size-default(14);
-}
-.text-body-4.text-body-4 {
-  margin: 0;
-  @include font-size-default(13);
-}
-.text-body-5.text-body-5 {
-  margin: 0;
-  @include font-size-default(12);
-}
-
-.text-title-1.text-title-1 {
-  margin: 0;
-  @include font-size-head(20);
-}
-.text-title-2.text-title-2 {
-  margin: 0;
-  @include font-size-head(18);
 }
