keyValue regular 마진 추가

--- a/src/assets/scss/components/ui/text/keyValue.scss
+++ b/src/assets/scss/components/ui/text/keyValue.scss
@@ -33,4 +33,12 @@
       text-align: left;
     }
   }
+
+  &--margin-regular {
+    .key-value__item {
+      & + .key-value__item {
+        margin-top: 16px;
+      }
+    }
+  }
 }
