YDW 작업 분량 검수

--- a/src/assets/scss/components/import/basic-list.scss
+++ b/src/assets/scss/components/import/basic-list.scss
@@ -92,6 +92,14 @@
     }
   }
 
+  &--normal-margin {
+    .basic-list__item {
+      & + .basic-list__item {
+        margin-top: 10px;
+      }
+    }
+  }
+
   &--small-margin {
     .basic-list__item {
       & + .basic-list__item {
