--- a/src/assets/scss/components/ui/layer/FullPopup.scss
+++ b/src/assets/scss/components/ui/layer/FullPopup.scss
@@ -51,6 +51,8 @@
   &__header {
     display: flex;
     padding: 12px 16px;
+    min-height: 48px;
+    box-sizing: border-box;
 
     &-left,
     &-right {
