인덱스 상태값 추가

--- a/src/assets/scss/views/uiGuide/GuideIndex.scss
+++ b/src/assets/scss/views/uiGuide/GuideIndex.scss
@@ -179,6 +179,10 @@
     background-color: #cf8800;
   }
 
+  &--partend {
+    background-color: #005ea6;
+  }
+
   &--end {
     background-color: #00a6a0;
   }
