--- a/src/assets/scss/components/ui/common/IllustObject.scss
+++ b/src/assets/scss/components/ui/common/IllustObject.scss
@@ -6,7 +6,7 @@
   box-sizing: content-box;
   padding-bottom: 16px;
   background: url('@/assets/images/illustration/img-1qcapital.png') no-repeat
-    50% 0 / 200px auto;
+    50% 0 / 100% auto;
 
   &--complete {
     background-image: url('@/assets/images/illustration/img-complete.png');
