--- a/src/assets/scss/components/ui/common/BasicBoxHead.scss
+++ b/src/assets/scss/components/ui/common/BasicBoxHead.scss
@@ -1,20 +1,17 @@
 .box-head {
   display: flex;
+  align-items: center;
   padding-bottom: 20px;
   border-bottom: 1px solid $color-gray-20;
   margin-bottom: 20px;
 
-  align-items: center;
   &__left {
     flex: 1;
     min-width: 0;
-    margin: 0;
-    @include font-size-default(16);
-    font-weight: 500;
   }
 
   &__right {
     flex: none;
-    margin: 0 0 0 16px;
+    margin-left: 16px;
   }
 }
