--- a/src/assets/scss/views/guide/LayerGuideAuthorityPermit.scss
+++ b/src/assets/scss/views/guide/LayerGuideAuthorityPermit.scss
@@ -2,5 +2,6 @@
 @import '@/assets/scss/components/import/basic-list.scss';
 
 .authority {
-  padding: 0 5px;
+  padding-left: 4px;
+  padding-right: 0;
 }
