--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -129,7 +129,7 @@ body,
 .color-gray-secondary.color-gray-secondary {
   color: $color-gray-60;
 }
-.color-tertiary.color-tertiary {
+.color-gray-tertiary.color-gray-tertiary {
   color: $color-gray-80;
 }
 .color-navy.color-navy {
