--- a/src/assets/scss/components/import/authority.scss
+++ b/src/assets/scss/components/import/authority.scss
@@ -16,34 +16,45 @@
   }
 
   &__icon {
+    flex: none;
     width: 36px;
     height: 36px;
+    margin-right: 16px;
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
   }
 
-  &__desc {
-    margin-left: 16px;
+  &__contents {
+    flex: 1;
+    min-width: 0;
+  }
 
-    &-block {
-      display: inline-flex;
-      vertical-align: middle;
+  &__head {
+    display: flex;
+    align-items: center;
+  }
 
-      span {
-        padding: 2px;
-        @include font-size-default(12);
-        box-sizing: border-box;
-      }
-    }
+  &__title {
+    @include font-size-default(15);
+    font-weight: 500;
+  }
 
-    &-title {
-      @include font-size-default(15);
-      color: $color-black;
-      font-weight: 500;
-    }
+  &__sub {
+    @include font-size-default(12);
+    color: $color-gray-60;
+    margin-left: 2px;
+  }
 
-    &-text {
-      margin-top: 2px;
-      @include font-size-default(12);
-      color: $color-gray-70;
-    }
+  &__text {
+    @include font-size-default(12);
+    color: $color-gray-70;
+  }
+
+  &__head + &__text {
+    margin-top: 2px;
   }
 }
