--- a/src/assets/scss/components/import/basic-list.scss
+++ b/src/assets/scss/components/import/basic-list.scss
@@ -56,35 +56,20 @@
     min-width: 0;
 
     > .basic-list {
-      margin: 8px 4px 0 -5px;
+      margin: 8px 4px 0 -4px;
     }
-  }
-
-  &__title {
-    display: block;
-    margin: 0;
-    font-weight: 500;
-  }
-
-  &__text {
-    display: block;
-    margin: 4px 0 0 0;
-    font-weight: 300;
   }
 
   &--regular {
     .basic-list__item {
       padding-right: 0;
-
-      & + .basic-list__item {
-        margin-top: 12px;
-      }
     }
 
     .basic-list__symbol {
+      margin-right: 6px;
+
       &:empty {
         min-width: 3px;
-        margin-right: 6px;
 
         &::before {
           margin-left: 0;
@@ -92,6 +77,14 @@
           width: 3px;
           height: 3px;
         }
+      }
+    }
+  }
+
+  &--regular-margin {
+    .basic-list__item {
+      & + .basic-list__item {
+        margin-top: 12px;
       }
     }
   }
