--- a/src/assets/scss/components/import/icon-list.scss
+++ b/src/assets/scss/components/import/icon-list.scss
@@ -1,3 +1,7 @@
+div.icon-list__block {
+  cursor: default;
+}
+
 .icon-list {
   display: block;
 
@@ -13,6 +17,8 @@
 
   &__block {
     @include reset-button;
+    color: inherit;
+    text-decoration: none;
     display: flex;
     align-items: center;
     width: 100%;
@@ -57,5 +63,10 @@
     @include font-size-default(13);
     font-weight: 400;
     color: $color-gray-70;
+  }
+
+  &__button {
+    width: auto;
+    margin-left: 16px;
   }
 }
