--- a/src/assets/scss/components/import/illustration-img.scss
+++ b/src/assets/scss/components/import/illustration-img.scss
@@ -1,10 +1,10 @@
-.illustrationImg {
+.illustration-img {
   margin-left: -20px;
   margin-right: -20px;
 
   svg {
     display: block;
     width: 100%;
-    height: 100%;
+    height: auto;
   }
 }
