--- a/src/assets/scss/components/import/product-detail.scss
+++ b/src/assets/scss/components/import/product-detail.scss
@@ -1,4 +1,6 @@
 .product-detail {
+  display: block;
+
   &__list {
     @include reset-list;
   }
@@ -13,49 +15,40 @@
   }
 
   &__icon {
+    flex: none;
     width: 36px;
     height: 36px;
+    margin-right: 12px;
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__block {
-    margin-left: 12px;
+    flex: 1;
+    min-width: 0;
   }
 
   &__title {
-    display: block;
     @include font-size-default(13);
     color: $color-gray-60;
   }
 
   &__desc {
-    display: block;
-    font-size: 0;
-    line-height: 0;
-    color: $color-black;
-
-    span {
-      display: inline-block;
-      vertical-align: baseline;
-    }
-
-    &-text {
-      @include font-size-default(15);
-      font-weight: 500;
-    }
-
-    &-unit {
-      padding-left: 2px;
-      box-sizing: border-box;
-      @include font-size-default(13);
-      font-weight: 500;
-    }
+    display: flex;
+    align-items: flex-end;
+    @include font-size-default(16);
+    font-weight: 500;
 
     &-sub {
-      padding-left: 2px;
-      box-sizing: border-box;
+      flex: none;
+      margin: 0 0 1px 2px;
       @include font-size-default(12);
-      color: $color-gray-80;
       font-weight: 300;
+      color: $color-gray-80;
     }
   }
 
@@ -64,30 +57,23 @@
       &__icon {
         width: 24px;
         height: 24px;
+        margin-right: 6px;
       }
 
       &__block {
-        margin-left: 6px;
-        font-size: 0;
-        line-height: 0;
-
-        & > * {
-          display: inline-block;
-        }
+        display: flex;
       }
 
       &__title {
-        padding: 2px 0;
+        flex: none;
+        margin-right: 6px;
         color: $color-gray-70;
-        box-sizing: border-box;
       }
 
       &__desc {
-        margin-left: 6px;
-
-        &-text {
-          @include font-size-default(13);
-        }
+        flex: 1;
+        min-width: 0;
+        @include font-size-default(14);
       }
     }
   }
