--- a/src/assets/scss/components/import/step.scss
+++ b/src/assets/scss/components/import/step.scss
@@ -1,28 +1,21 @@
 .step {
   position: relative;
 
-  &::after {
+  &::before {
     content: '';
     position: absolute;
-    z-index: 1;
     top: 0;
-    left: 0;
+    left: 50%;
     bottom: 0;
-    width: 50%;
     border-right: 1px dashed $color-gray-30;
   }
 
   &__list {
     @include reset-list;
     position: relative;
-    z-index: 2;
-    margin: 0;
   }
 
   &__item {
-    background: $color-navy-05;
-    border-radius: 12px;
-
     & + & {
       margin-top: 16px;
     }
@@ -33,50 +26,46 @@
     align-items: center;
     padding: 20px;
     box-sizing: border-box;
+    border-radius: 12px;
+    background-color: $color-navy-05;
   }
 
   &__contents {
     flex: 1;
     min-width: 0;
-    font-size: 0;
-    line-height: 0;
+  }
+
+  &__top {
+    display: flex;
+    align-items: center;
+    margin-bottom: 6px;
   }
 
   &__badge {
-    display: inline-block;
-    vertical-align: top;
+    flex: none;
     padding: 2px 6px;
-    border-radius: 40px;
+    border-radius: 100px;
     background-color: rgba($color-navy-80, 0.12);
-    box-sizing: border-box;
-
-    &-text {
-      display: inline-block;
-      vertical-align: top;
-      @include font-size-default(8);
-      color: $color-navy-90;
-      text-align: center;
-      font-weight: 700;
-    }
+    @include font-size-default(8);
+    color: $color-navy-90;
+    font-weight: 700;
   }
 
   &__text {
-    margin-top: 6px;
     @include font-size-default(14);
-    color: $color-black;
+    font-weight: 300;
   }
 
   &__icon {
+    flex: none;
+    margin-left: 16px;
     width: 40px;
     height: 40px;
 
     svg {
+      display: block;
       width: 100%;
       height: 100%;
     }
-  }
-
-  &__contents + &__icon {
-    margin-left: 16px;
   }
 }
