--- a/src/assets/scss/components/import/timeout.scss
+++ b/src/assets/scss/components/import/timeout.scss
@@ -1,17 +1,16 @@
 .timeout {
+  padding-top: 16px;
   text-align: center;
 
   &__title {
+    margin-bottom: 2px;
     @include font-size-default(14);
-    letter-spacing: $letter-spacing-default;
     color: $color-gray-60;
   }
 
   &__time {
-    margin-top: 2px;
     @include font-size-head(28);
     font-weight: 700;
-    letter-spacing: $letter-spacing-default;
     color: $color-green-50;
   }
 }
