--- a/src/assets/scss/views/personalLoan/LayerPersonalLoanHappinessApartmentResult.scss
+++ b/src/assets/scss/views/personalLoan/LayerPersonalLoanHappinessApartmentResult.scss
@@ -1,3 +1,7 @@
 @import '@/assets/scss/components/import/product-detail.scss';
 @import '@/assets/scss/components/import/basic-list.scss';
 @import '@/assets/scss/components/import/icon-list.scss';
+
+.illust {
+  padding-bottom: 6px;
+}
